adds score message

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <body>
     <h1>Blackjack Basic Strategy Practice</h1>
+    <div class="output-message" >
+        <p id="score-message">
+            Current Score: 0/280
+        </p>
+    </div>
     <div class="container">
         <div id="dealer-hand" class="hand">
             <div>(Dealer's Upcard)</div>
