--- a/index.html
+++ b/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Blackjack Basic Strategy Practice</title>
-    <link rel="stylesheet" href="basic-strategy.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>hi sophi :3</title>
+    <link rel="stylesheet" href="sophi.css" />
   </head>
-
   <body>
-    <h1>Hello World</h1>
-    <script src="basic-strategy-testing.js"></script>
+    <audio id="congratsSound">
+      <source src="wow.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="boowomp">
+      <source src="spongebob-boowomp.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="boowomp2">
+      <source src="spongebob-boowomp.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="boowomp3">
+      <source src="spongebob-boowomp.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="xqc-smash">
+      <source src="xqc-smash.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="xqc-smash2">
+      <source src="xqc-smash.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="dattebayo">
+      <source src="dattebayo.mp3" type="audio/mp3" />
+    </audio>
+    <audio id="araara">
+      <source src="ara-ara-ma-maa.mp3" type="audio/mp3" />
+    </audio>
+    <div class="container">
+      <div class="inner">
+        <div class="message-2" id="message-2"></div>
+        <div class="message-3" id="message-3"></div>
+        <div id="pump" class="pump">
+          <div id="meter" class="meter"></div>
+          <div id="message" class="message">Fill the pump all the way!</div>
+        </div>
+        <div id="police-gun">
+          <img class="police-gun" src="police-gun.jpg" alt="popo" />
+        </div>
+        <div id="anime-girl">
+          <img class="anime-girl" src="anime-girl.jpg" alt="anime-girl" />
+        </div>
+        <div id="spongebob">
+          <img class="spongebob" src="spongebob.gif" alt="spongebob" />
+        </div>
+        <div id="xqc">
+          <img class="xqc" src="xqc.gif" alt="xqc" />
+        </div>
+        <div class="kawaii-cute-gif" id="kawaii-cute-gif">
+          <img src="kawaii-cute.gif" alt="kawaii-cute-gif" />
+        </div>
+        <div class="cute-gif" id="markiplier">
+          <img src="hypercat.gif" alt="Markiplier" />
+        </div>
+        <button id="nextButton" class="next-button">Go to next task</button>
+        <button id="jump" class="no-button" onmouseover="jump()">no</button>
+      </div>
+    </div>
+    <script src="sophi.js"></script>
   </body>
 </html>
