--- a/index.html
+++ b/index.html
@@ -51,8 +51,17 @@
         <div id="xqc">
           <img class="xqc" src="xqc.gif" alt="xqc" />
         </div>
+        <div id="xqc-thumbsup">
+          <img class="xqc" src="xqc-thumbsgif.gif" alt="xqc4" />
+        </div>
+        <div id="angry-anime">
+          <img class="angry-anime" src="menhera-chan.gif" alt="xqc3" />
+        </div>
         <div class="kawaii-cute-gif" id="kawaii-cute-gif">
           <img src="kawaii-cute.gif" alt="kawaii-cute-gif" />
+        </div>
+        <div class="kiss" id="kiss">
+          <img src="loved-it-kiss.gif" alt="kiss" />
         </div>
         <div class="cute-gif" id="markiplier">
           <img src="hypercat.gif" alt="Markiplier" />
